# agent-capability-registry

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_capability_registry/: __init__.py  core.py
tests/: test_agent_capability_registry.py
